--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" href="img/logo(3).png" type="image/x-icon" />
+        <link rel="icon" href="logo(3).png" type="image/x-icon" />
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
         <title>My Perosonal Blog </title>
 
@@ -51,7 +51,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt=""></a>
+                        <a class="navbar-brand" href="index.html"><img src="logo.png" alt=""></a>
                     </div>
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -79,8 +79,8 @@
                         <div class="col-md-5">
                             <div class="person_img">
                                 <video width="320" height="340" controls>
-  <source src="img/movie.mp4" type="video/mp4">
-  <source src="img/movie.ogg" type="video/ogg">
+  <source src="movie.mp4" type="video/mp4">
+  <source src="movie.ogg" type="video/ogg">
   Your browser does not support the video tag.
 </video>
                                 <a class="download_btn" href="https://www.xtube.com/video-watch/hot-old-man-wanking-again-24321771?utm_campaign=hubtraffic_tubegals"><span>Grace Valmonte</span></a>
@@ -321,7 +321,7 @@
                             <div class="col-md-4 photo marketing">
                                 <div class="portfolio_item">
                                     <div class="portfolio_img">
-                                        <img src="img/portfolio-1.jpg" alt="" style="height:280px; width:340px;">
+                                        <img src="portfolio-1.jpg" alt="" style="height:280px; width:340px;">
                                     </div>
                                     <div class="portfolio_title">
                                         <a href="#"><h4>Dreams visualization</h4></a>
@@ -332,7 +332,7 @@
                             <div class="col-md-4 design">
                                 <div class="portfolio_item">
                                     <div class="portfolio_img">
-                                        <img src="img/portfolio-2.jpg" alt="" style="height:280px; width:340px;">
+                                        <img src="portfolio-2.jpg" alt="" style="height:280px; width:340px;">
                                     </div>
                                     <div class="portfolio_title">
                                         <a href="#"><h4>Dreams visualization</h4></a>
@@ -343,7 +343,7 @@
                             <div class="col-md-4 photo marketing">
                                 <div class="portfolio_item">
                                     <div class="portfolio_img">
-                                        <img src="img/portfolio-3.jpg" alt="" style="height:280px; width:340px;">
+                                        <img src="portfolio-3.jpg" alt="" style="height:280px; width:340px;">
                                     </div>
                                     <div class="portfolio_title">
                                         <a href="#"><h4>Dreams visualization</h4></a>
@@ -354,7 +354,7 @@
 							<div class="col-md-4 photo location">
                                 <div class="portfolio_item">
                                     <div class="portfolio_img">
-                                        <img src="img/g1.png" alt="" style="height:280px; width:340px;">
+                                        <img src="g1.png" alt="" style="height:280px; width:340px;">
                                     </div>
                                     <div class="portfolio_title">
                                         <a href="#"><h4>Dreams visualization</h4></a>
@@ -365,7 +365,7 @@
 							<div class="col-md-4 photo location">
                                 <div class="portfolio_item">
                                     <div class="portfolio_img">
-                                        <img src="img/g2.png" alt="" style="height:280px; width:340px;">
+                                        <img src="g2.png" alt="" style="height:280px; width:340px;">
                                     </div>
                                     <div class="portfolio_title">
                                         <a href="#"><h4>Dreams visualization</h4></a>
@@ -376,7 +376,7 @@
 							<div class="col-md-4 photo location">
                                 <div class="portfolio_item">
                                     <div class="portfolio_img">
-                                        <img src="img/g3.png" alt="" style="height:280px; width:340px;">
+                                        <img src="g3.png" alt="" style="height:280px; width:340px;">
                                     </div>
                                     <div class="portfolio_title">
                                         <a href="#"><h4>Dreams visualization</h4></a>
@@ -387,7 +387,7 @@
 							<div class="col-md-4 photo location">
                                 <div class="portfolio_item">
                                     <div class="portfolio_img">
-                                        <img src="img/g4.png" alt="" style="height:280px; width:340px;">
+                                        <img src="g4.png" alt="" style="height:280px; width:340px;">
                                     </div>
                                     <div class="portfolio_title">
                                         <a href="#"><h4>Dreams visualization</h4></a>
@@ -398,7 +398,7 @@
 							<div class="col-md-4 photo location">
                                 <div class="portfolio_item">
                                     <div class="portfolio_img">
-                                        <img src="img/m1.png" alt="" style="height:280px; width:340px;">
+                                        <img src="m1.png" alt="" style="height:280px; width:340px;">
                                     </div>
                                     <div class="portfolio_title">
                                         <a href="#"><h4>Dreams visualization</h4></a>
@@ -409,7 +409,7 @@
 							<div class="col-md-4 photo location">
                                 <div class="portfolio_item">
                                     <div class="portfolio_img">
-                                        <img src="img/m2.png" alt="" style="height:280px; width:340px;">
+                                        <img src="m2.png" alt="" style="height:280px; width:340px;">
                                     </div>
                                     <div class="portfolio_title">
                                         <a href="#"><h4>Dreams visualization</h4></a>
@@ -420,7 +420,7 @@
 							<div class="col-md-4 photo location">
                                 <div class="portfolio_item">
                                     <div class="portfolio_img">
-                                        <img src="img/m3.png" alt="" style="height:280px; width:340px;">
+                                        <img src="m3.png" alt="" style="height:280px; width:340px;">
                                     </div>
                                     <div class="portfolio_title">
                                         <a href="#"><h4>Dreams visualization</h4></a>
@@ -431,7 +431,7 @@
 							<div class="col-md-4 photo Boyfriend">
                                 <div class="portfolio_item">
                                     <div class="portfolio_img">
-                                        <img src="img/1.jpg" alt="" style="height:280px; width:340px;">
+                                        <img src="1.jpg" alt="" style="height:280px; width:340px;">
                                     </div>
                                     <div class="portfolio_title">
                                         <a href="#"><h4>Dreams visualization</h4></a>
@@ -442,7 +442,7 @@
 							<div class="col-md-4 photo Boyfriend">
                                 <div class="portfolio_item">
                                     <div class="portfolio_img">
-                                        <img src="img/2.jpg" alt="" style="height:280px; width:340px;">
+                                        <img src="2.jpg" alt="" style="height:280px; width:340px;">
                                     </div>
                                     <div class="portfolio_title">
                                         <a href="#"><h4>Dreams visualization</h4></a>
@@ -453,7 +453,7 @@
 							<div class="col-md-4 photo Boyfriend">
                                 <div class="portfolio_item">
                                     <div class="portfolio_img">
-                                        <img src="img/3.jpg" alt="" style="height:280px; width:340px;">
+                                        <img src="3.jpg" alt="" style="height:280px; width:340px;">
                                     </div>
                                     <div class="portfolio_title">
                                         <a href="#"><h4>Dreams visualization</h4></a>
@@ -464,7 +464,7 @@
 							<div class="col-md-4 photo Boyfriend">
                                 <div class="portfolio_item">
                                     <div class="portfolio_img">
-                                        <img src="img/4.jpg" alt="" style="height:280px; width:340px;">
+                                        <img src="4.jpg" alt="" style="height:280px; width:340px;">
                                     </div>
                                     <div class="portfolio_title">
                                         <a href="#"><h4>Dreams visualization</h4></a>
@@ -475,7 +475,7 @@
 							<div class="col-md-4 photo Boyfriend">
                                 <div class="portfolio_item">
                                     <div class="portfolio_img">
-                                        <img src="img/5.jpg" alt="" style="height:280px; width:340px;">
+                                        <img src="5.jpg" alt="" style="height:280px; width:340px;">
                                     </div>
                                     <div class="portfolio_title">
                                         <a href="#"><h4>Dreams visualization</h4></a>
@@ -486,7 +486,7 @@
 							<div class="col-md-4 photo Boyfriend">
                                 <div class="portfolio_item">
                                     <div class="portfolio_img">
-                                        <img src="img/6.jpg" alt="" style="height:280px; width:340px;">
+                                        <img src="6.jpg" alt="" style="height:280px; width:340px;">
                                     </div>
                                     <div class="portfolio_title">
                                         <a href="#"><h4>Dreams visualization</h4></a>
@@ -497,7 +497,7 @@
                             <div class="col-md-4 design marketing">
                                 <div class="portfolio_item">
                                     <div class="portfolio_img">
-                                        <img src="img/portfolio-4.jpg" alt="" style="height:280px; width:340px;">
+                                        <img src="portfolio-4.jpg" alt="" style="height:280px; width:340px;">
                                     </div>
                                     <div class="portfolio_title">
                                         <a href="#"><h4>Dreams visualization</h4></a>
@@ -508,7 +508,7 @@
                             <div class="col-md-4 photo">
                                 <div class="portfolio_item">
                                     <div class="portfolio_img">
-                                        <img src="img/portfolio-5.jpg" alt="" style="height:280px; width:340px;">
+                                        <img src="portfolio-5.jpg" alt="" style="height:280px; width:340px;">
                                     </div>
                                     <div class="portfolio_title">
                                         <a href="#"><h4>Dreams visualization</h4></a>
@@ -519,7 +519,7 @@
                             <div class="col-md-4 marketing">
                                 <div class="portfolio_item">
                                     <div class="portfolio_img">
-                                        <img src="img/portfolio-6.jpg" alt="" style="height:280px; width:340px;">
+                                        <img src="portfolio-6.jpg" alt="" style="height:280px; width:340px;">
                                     </div>
                                     <div class="portfolio_title">
                                         <a href="#"><h4>Dreams visualization</h4></a>
@@ -556,19 +556,19 @@
                                     </div>
                                     <div class="blog_slider_inner">
                                         <div class="item">
-                                            <img src="img/i1.jpg" alt="" style="height:200px; width:300px;">
+                                            <img src="i1.jpg" alt="" style="height:200px; width:300px;">
                                             <a href="#"><h3>The Importance of Sex Experience</h3></a>
                                             <p>Ultimately, love is much more important than sex and sex becomes greater when you're really in love <a href="#">Read More</a></p>
                                             <h5>Posted by Grace Valmonte at 29 June, 2018</h5>
                                         </div>
                                         <div class="item">
-                                            <img src="img/i2.jpg" alt="" style="height:200px; width:300px;">
+                                            <img src="i2.jpg" alt="" style="height:200px; width:300px;">
                                             <a href="#"><h3>The Importance of Sex Experience</h3></a>
                                             <p>Ultimately, love is much more important than sex and sex becomes greater when you're really in love <a href="#">Read More</a></p>
                                             <h5>Posted by Grace Valmonte at 29 June, 2018	</h5>
                                         </div>
                                         <div class="item">
-                                            <img src="img/i3.jpg" alt="" style="height:200px; width:300px;">
+                                            <img src="i3.jpg" alt="" style="height:200px; width:300px;">
                                             <a href="#"><h3>The Importance of Sex Experience</h3></a>
                                             <p>Ultimately, love is much more important than sex and sex becomes greater when you're really in love <a href="#">Read More</a></p>
                                             <h5>Posted by Grace Valmonte at 29 June, 2018</h5>
@@ -582,15 +582,15 @@
                                         <h3><i class="fa fa-instagram"></i>Instagram</h3>
                                     </div>
                                     <ul>
-                                        <li><a href="#"><img src="img/instagram-1.jpg" alt="" style="height:84px; width: 127px;"></a></li>
-                                        <li><a href="#"><img src="img/instagram-2.jpg" alt="" style="height:84px; width: 127px;"></a></li>
-                                        <li><a href="#"><img src="img/instagram-3.jpg" alt="" style="height:84px; width: 127px;"></a></li>
-                                        <li><a href="#"><img src="img/instagram-4.jpg" alt="" style="height:84px; width: 127px;"></a></li>
-                                        <li><a href="#"><img src="img/instagram-5.jpg" alt="" style="height:84px; width: 127px;"></a></li>
-                                        <li><a href="#"><img src="img/instagram-6.jpg" alt="" style="height:84px; width: 127px;"></a></li>
-                                        <li><a href="#"><img src="img/instagram-7.jpg" alt="" style="height:84px; width: 127px;"></a></li>
-                                        <li><a href="#"><img src="img/instagram-8.jpg" alt="" style="height:84px; width: 127px;"></a></li>
-                                        <li><a href="#"><img src="img/instagram-9.jpg" alt="" style="height:84px; width: 127px;"></a></li>
+                                        <li><a href="#"><img src="instagram-1.jpg" alt="" style="height:84px; width: 127px;"></a></li>
+                                        <li><a href="#"><img src="instagram-2.jpg" alt="" style="height:84px; width: 127px;"></a></li>
+                                        <li><a href="#"><img src="instagram-3.jpg" alt="" style="height:84px; width: 127px;"></a></li>
+                                        <li><a href="#"><img src="instagram-4.jpg" alt="" style="height:84px; width: 127px;"></a></li>
+                                        <li><a href="#"><img src="instagram-5.jpg" alt="" style="height:84px; width: 127px;"></a></li>
+                                        <li><a href="#"><img src="instagram-6.jpg" alt="" style="height:84px; width: 127px;"></a></li>
+                                        <li><a href="#"><img src="instagram-7.jpg" alt="" style="height:84px; width: 127px;"></a></li>
+                                        <li><a href="#"><img src="instagram-8.jpg" alt="" style="height:84px; width: 127px;"></a></li>
+                                        <li><a href="#"><img src="instagram-9.jpg" alt="" style="height:84px; width: 127px;"></a></li>
                                     </ul>
                                     <a class="follow_btn" href="#"><i class="fa fa-instagram"></i> Follow on Instagram</a>
                                 </div>
@@ -691,7 +691,7 @@
         <footer class="footer_area">
             <div class="footer_inner">
                 <div class="container">
-                    <img src="img/logos.png" alt="" style="height:90px; width:140px;">
+                    <img src="logos.png" alt="" style="height:90px; width:140px;">
                     <ul class="social_icon">
                         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
